@@ -158,12 +158,6 @@ switch ($activeTab) {
 				$width = (int) get_parameter ("width", 0);
 				$height = (int) get_parameter ("height", 0);
 				
-				if($width == 0 || $height == 0) {
-					$sizeImage = getimagesize($config['homedir'] . '/images/console/icons/' . $image . '.png');
-					$width = $sizeImage[0];
-					$height = $sizeImage[1];
-				}
-				
 				$message = '';
 				
 				if (empty($name_modules)) {
