@@ -1,3 +1,12 @@
+2011-02-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	Merged bugfix from trunk.
+
+	* godmode/reporting/visual_console_builder.php: Small icons created
+	in visual console wizard are resized after changed it into a smaller one.
+
+	Fixed bug 3175809.
+
 2011-02-22 Sancho Lerena <slerena@artica.es>
 
 	* include/functions_extensions.php: Extension menu entries text not
